# Gears-game-engine

./: .gitmodules  CMakeLists.txt  README.md  engineDevice.hpp  enginePipeline.cpp  enginePipeline.hpp  engineWindow.cpp  engineWindow.hpp  firstApp.cpp  firstApp.hpp  main.cpp  script.rc
.github/workflows/: Ubuntu build.yml  Windows build.yml  cmake-multi-platform.yml
engine/: Application.cpp  Application.hpp  compile.bat  engine.cpp  engine.hpp  engineCamera.cpp  engineCamera.cppm  engineCamera.hpp  engineDevice.cpp  engineDevice.cppm  engineDevice.hpp  engineGameObject.cppm  engineGameObject.hpp  engineModel.cpp  engineModel.cppm  engineModel.hpp  enginePipeline.cpp  enginePipeline.cppm  enginePipeline.hpp  engineRenderSystem.cpp  engineRenderSystem.cppm  engineRenderSystem.hpp  engineRenderer.cpp  engineRenderer.cppm  engineRenderer.hpp  engineSwapChain.cpp  engineSwapChain.cppm  engineSwapChain.hpp  engineUtils.hpp  engineWindow.cpp  engineWindow.cppm  engineWindow.hpp  firstApp.cpp  firstApp.hpp  keyboardMovementController.cpp  keyboardMovementController.hpp  logger.cpp  logger.cppm  logger.hpp  macro.hpp  (+6 more)
engine/shaders/: shader.frag  shader.vert  simple_shader.frag  simple_shader.vert
gears/editor/: CMakeLists.txt  engine.cpp  engine.hpp  main.cpp
gears/engine/: CMakeLists.txt  engineUtils.hpp  logger.cppm  macro.hpp  main.hpp  movementController.cppm
shaders/: simple_shader.frag  simple_shader.frag.spv  simple_shader.vert
